public static class Constants
{
    public static string HorizontalAxis = "Horizontal";
    public static string JumpButton = "Jump";
    
    /// <summary>
    /// Player animation properties
    /// </summary>
    public static string AnimationPlayerJump = "Jump";
    public static string AnimationPlayerMove = "Velocity";
    public static string AnimationPlayerAttack = "Attack";

    public static string RespawnActivationTrigger = "Activate";

    public static string PlayerTag = "Player";
}